@@ -36,7 +36,8 @@ IVANOBJ  = $(IVANDIR)/Source/charba.o $(IVANDIR)/Source/area.o $(IVANDIR)/Source
            $(IVANDIR)/Source/wsquare.o $(IVANDIR)/Source/type.o $(IVANDIR)/Source/worldmap.o\
            $(IVANDIR)/Source/wskill.o $(IVANDIR)/Source/wterraba.o $(IVANDIR)/Source/wterrade.o\
            $(IVANDIR)/Source/config.o $(IVANDIR)/Source/terra.o $(IVANDIR)/Source/entity.o\
-           $(IVANDIR)/Source/fluid.o $(IVANDIR)/Source/unit.o $(IVANDIR)/Source/igraph.o
+           $(IVANDIR)/Source/fluid.o $(IVANDIR)/Source/unit.o $(IVANDIR)/Source/igraph.o\
+           $(IVANDIR)/Source/identity.o $(IVANDIR)/Source/slot.o
 FLAGS = -IInclude -I$(FeDXDIR)/Include -I$(FEELDIR)/Include -I$(FeFileDIR)/Include -I$(FeIODIR)/Include -I$(FELLDIR)/Include -I$(FeMathDIR)/Include -I$(FeWinDIR)/Include -s -O3 -ffast-math -W -Wall
 LIBS = -lstdcxx
 
